Remove duplicated post

--- a/posts.html
+++ b/posts.html
@@ -78,32 +78,6 @@
         </nav>
       </div>
     </header>
-    <section class="u-black u-clearfix u-section-2" id="carousel_948c">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-middle-xs u-sheet-1">
-        <div class="u-blog u-expanded-width u-blog-1">
-          <div class="u-repeater u-repeater-1"><!--blog_post-->
-            <div class="u-blog-post u-container-style u-repeater-item u-white u-repeater-item-1">
-              <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
-
-                  src="images/ara.bmp53.png" alt="" data-image-width="974" data-image-height="602">
-                <h1 class="u-text u-text-1"> <a href="https://oxid15.github.io/Blogposts/the-task-of-face-liveness-detection.html"
-
-                    class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1">
-                    Review of image smoothing algorithms</a> </h1>
-                <p class="u-text u-text-2"> 22.09.2020</p>
-                <p class="u-text u-text-3"> What is the task of image
-                  smoothing, when is it used and what approaches to
-                  it exist in image processing practice.</p>
-                <a href="Blogposts/Review-of-Img-Smooth-Algos.html" data-page-id="195068502"
-
-                  class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-hover-black u-radius-50 u-btn-2">Read
-                  more</a> </div>
-            </div>
-            <!--/blog_post--> </div>
-        </div>
-        <!--/blog--> </div>
-    </section>
     <section class="u-black u-clearfix u-section-1" id="sec-d960">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
         <div class="u-blog u-expanded-width u-blog-1">
@@ -113,7 +87,7 @@
                 <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
 
                   src="images/motion.png" alt="" data-image-width="920" data-image-height="336">
-                <h1 class="u-text u-text-1"> <a href="https://oxid15.github.io/posts/the-task-of-face-liveness-detection.html"
+                <h1 class="u-text u-text-1"> <a href="Blogposts/The-task-of-face-liveness-det.html"
 
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1">The
                     task of face liveness detection</a> </h1>
@@ -137,7 +111,7 @@
                 <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
 
                   src="images/ara.bmp53.png" alt="" data-image-width="974" data-image-height="602">
-                <h1 class="u-text u-text-1"> <a href="https://oxid15.github.io/posts/the-task-of-face-liveness-detection.html"
+                <h1 class="u-text u-text-1"> <a href="Blogposts/Review-of-Img-Smooth-Algos.html"
 
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1">
                     Review of image smoothing algorithms</a> </h1>
