--- a/posts.html
+++ b/posts.html
@@ -87,12 +87,12 @@
                 <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
 
                   src="images/cascade_card.jpg" alt="" data-image-width="920" data-image-height="336">
-                <h1 class="u-text u-text-1"> <a href="Blogposts/Cascade-announce.html"
+                <h1 class="u-text u-text-1"> <a href="posts/Cascade-announce.html"
 
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1">Cascade project</a> </h1>
                 <p class="u-text u-text-2"> 22.07.2022</p>
                 <p class="u-text u-text-3"> Lightweight ML Engineering Library </p>
-                <a href="Blogposts/Cascade-announce.html"
+                <a href="posts/Cascade-announce.html"
 
                   class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-hover-black u-radius-50 u-btn-2">Read
                   more</a> </div>
@@ -111,13 +111,13 @@
                 <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
 
                   src="images/motion.png" alt="" data-image-width="920" data-image-height="336">
-                <h1 class="u-text u-text-1"> <a href="Blogposts/The-task-of-face-liveness-det.html"
+                <h1 class="u-text u-text-1"> <a href="posts/The-task-of-face-liveness-det.html"
 
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1">The
                     task of face liveness detection</a> </h1>
                 <p class="u-text u-text-2"> 08.11.2020</p>
                 <p class="u-text u-text-3"> Are any of these faces real? </p>
-                <a href="Blogposts/The-task-of-face-liveness-det.html" data-page-id="93972749"
+                <a href="posts/The-task-of-face-liveness-det.html" data-page-id="93972749"
 
                   class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-hover-black u-radius-50 u-btn-2">Read
                   more</a> </div>
@@ -135,7 +135,7 @@
                 <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
 
                   src="images/ara.bmp53.png" alt="" data-image-width="974" data-image-height="602">
-                <h1 class="u-text u-text-1"> <a href="Blogposts/Review-of-Img-Smooth-Algos.html"
+                <h1 class="u-text u-text-1"> <a href="posts/Review-of-Img-Smooth-Algos.html"
 
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1">
                     Review of image smoothing algorithms</a> </h1>
@@ -143,7 +143,7 @@
                 <p class="u-text u-text-3"> What is the task of image smoothing,
                   when is it used and what approaches to it exist in image
                   processing practice.</p>
-                <a href="Blogposts/Review-of-Img-Smooth-Algos.html" data-page-id="195068502"
+                <a href="posts/Review-of-Img-Smooth-Algos.html" data-page-id="195068502"
 
                   class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-hover-black u-radius-50 u-btn-2">Read
                   more</a> </div>
