--- a/index.html
+++ b/index.html
@@ -412,21 +412,23 @@
         <ul class="u-text u-text-default u-text-7">
           <li> <span style="font-size: 1.5rem;">Computer Vision</span> </li>
           <li> <span style="font-size: 1.5rem;">Image Processing</span> </li>
-          <li> <span style="font-size: 1.5rem;">Bash</span> </li>
-          <li> <span style="font-size: 1.5rem;">Git <span style="font-weight: 700;"></span>
-            </span> </li>
+          <li> <span style="font-size: 1.5rem;">NLP</span> </li>
+          <li> <span style="font-size: 1.5rem;">Sound Processing</span> </li>
         </ul>
-        <ul class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-8">
-          <li> <span style="font-size: 24px;">Torch</span> </li>
-          <li> <span style="font-size: 24px;">Tensorflow</span> </li>
-          <li> <span style="font-size: 24px;">Developement for edge-devices</span>
+        <ul class="u-text u-text-8">
+          <li> <span style="font-size: 24px;">Research</span> </li>
+          <li> <span style="font-size: 24px;">Rapid Prototyping</span> </li>
+          <li> <span style="font-size: 24px;">Developement for <br> edge-devices</span>
+          <li> <span style="font-size: 24px;">Deploying ML to production</span>
           </li>
         </ul>
         <ul class="u-text u-text-default u-text-9">
           <li> <span style="font-size: 1.5rem;">CI</span> </li>
-          <li> <span style="font-size: 24px;">Gitlab</span> </li>
+          <li> <span style="font-size: 24px;">Torch</span> </li>
           <li> <span style="font-size: 1.5rem;">cmake</span> </li>
           <li> <span style="font-size: 24px;">opencv</span> </li>
+          <li> <span style="font-size: 24px;">git</span> </li>
+          <li> <span style="font-size: 24px;">bash</span> </li>
         </ul>
         <h4 class="u-text u-text-default u-text-10">Languages</h4>
         <ul class="u-text u-text-default u-text-11">
